# whatsapp-bot

./: .gitignore  docker-compose.yml
nodejs-app/: .env.development  .env.example  .env.production  Dockerfile  app.js  getdeobfusctae.js  package.json  routes.js  whatsapp.js
nodejs-app/controllers/: chatsController.js  getMessages.js  groupsController.js  sessionsController.js
nodejs-app/example-ts/: package.json  tsconfig.json  wa-logs.txt
nodejs-app/example-ts/baileys_auth_info/: app-state-sync-key-AAAAAIud.json  app-state-sync-key-AAAAAIue.json  app-state-sync-key-AAAAAIui.json  app-state-sync-key-AAAAAIuk.json  app-state-sync-key-AAAAAIum.json  app-state-sync-version-critical_block.json  app-state-sync-version-critical_unblock_low.json  app-state-sync-version-regular.json  app-state-sync-version-regular_high.json  creds.json  pre-key-1.json  pre-key-10.json  pre-key-11.json  pre-key-12.json  pre-key-13.json  pre-key-14.json  pre-key-15.json  pre-key-16.json  (+22 more)
nodejs-app/public/: index.html
nodejs-app/routes/: chatsRoute.js  sessionsRoute.js
rust-app/: Cargo.toml  Dockerfile  Rocket.toml
rust-app/db/diesel/: db.sqlite  db.sqlite-shm  db.sqlite-wal  schema.sql
rust-app/src/: chatbot.rs  db.rs  form.rs  main.rs  tblmessages.rs
rust-app/src/api/: chatbot.rs  devices.rs  mod.rs  sendmsg.rs  webhook.rs
rust-app/src/data/: mod.rs  wamessage.rs
rust-app/src/repo/: mod.rs  tbldevices.rs  tblmessages.rs
rust-app/templates/: index.html.tera
rust-app/templates/chatbot/: index.html.tera
rust-lambda/: Cargo.toml
rust-lambda/src/: main.rs  wamessage.rs
(+162 files in other folders)
