[package]
name = "wa-chatbot"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.1",features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
diesel = { version = "2", features = ["returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera", "minijinja"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite", "diesel_mysql"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool", "sqlite_pool"]

